# SPDX-FileCopyrightText: 2024 Lukas Schrangl <lukas.schrangl@boku.ac.at>
#
# SPDX-License-Identifier: BSD-3-Clause

[project]
name = "smfret-bondtime"
description = "Infer receptor–ligand bond lifetimes from smFRET data"
authors = [
    { name = "Lukas Schrangl", email = "lukas.schrangl@boku.ac.at" },
]
maintainers = [
    { name = "Lukas Schrangl", email = "lukas.schrangl@boku.ac.at" },
]
requires-python = ">=3.10"
dependencies = [
    "PyQt5",
    "lifelines",
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "sdt-python>=19.0.1",
    "trackpy",
]
dynamic = ["version"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",

    "License :: OSI Approved :: BSD License",
    "License :: OSI Approved :: MIT License",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",

    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Physics",
]
readme = "README.md"
license-files = { globs = ["LICENSES/*.txt"] }

[project.gui-scripts]
smfret-bondtime = "smfret_bondtime.gui:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
repository = "https://github.com/schuetzgroup/smfret-bondtime"

[tool.hatch.version]
path = "smfret_bondtime/_version.py"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
