# SPDX-FileCopyrightText: 2024 Lukas Schrangl <lukas.schrangl@boku.ac.at>
#
# SPDX-License-Identifier: BSD-3-Clause

[project]
name = "smfret-bondtime"
description = "Infer receptor–ligand bond lifetimes from smFRET data"
authors = [
    { name = "Lukas Schrangl", email = "lukas.schrangl@boku.ac.at" },
]
maintainers = [
    { name = "Lukas Schrangl", email = "lukas.schrangl@boku.ac.at" },
]
requires-python = ">=3.10"
dependencies = [
    "lifelines",
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "sdt-python>=19.0.1",
]
version = "2.1.1"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",

    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Physics",
]
readme = "README.md"
license = "BSD-3-Clause AND MIT AND CC-BY-SA-4.0"
license-files = ["LICENSES/*.txt"]

[project.gui-scripts]
smfret-bondtime = "smfret_bondtime.gui:run"

[project.optional-dependencies]
gui = [
    "sdt-python[gui]>=20.1.3",
    "pyside6>=6.10.2",
    "numba>=0.63.1",
    "trackpy>=0.7",
    "openpyxl>=3.1.5",
    "odfpy>=1.4.1",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[project.urls]
repository = "https://github.com/schuetzgroup/smfret-bondtime"

[tool.ruff.lint]
select = ["NPY201"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.uv.build-backend]
module-root = ""
module-name = "smfret_bondtime"
source-include = ["doc/**"]
